--- a/sm1/q3help.html
+++ b/sm1/q3help.html
@@ -247,10 +247,14 @@ This finds a cut-off such that 95\% of the statistic values are below
 it, and 5\% are above it. Now, you may easily guess that this
 rather vague description has problems: what if we have no such
 cut-off, more than one such cut-off? There are different ways to
-solve this problem. If you do the simulation a large number of
+solve this problem. If you look up the help of
+the <font size="+1" color="red"><code>quantile</code></font> function, you will find a input
+called <font size="+1" color="red"><code>type</code></font> that chooses the specific algorithm to
+be used. However, if you do the simulation a large number of
 times (<i>i.e.</i>, after statistical regularity has set in), all the
-methods give you essentially the same answer for the continuuos
-distribution. Generally, we refrain from using
+methods give you essentially the same answer for the continuous
+distribution. So you do not need to bother much about the exact
+algorithm being used. Generally, we refrain from using
 the <font size="+1" color="red"><code>quantile</code></font>  function for the discrete case.
 <hr/>
 <table width="100%" border="0">
