--- a/sm1/index.html
+++ b/sm1/index.html
@@ -323,8 +323,17 @@ date: Sep 05, 2023]</li>
 
 <li>[<a href="haldane.pdf">Haldane's lecture</a>]</li>
 
+<li>[<a href="RsessAug28.txt">R session used in class</a>]</li>
+
 </ul>
 
+</li>
+
+
+<li>Aug 31, 2023:
+[<a href="links.html">Links to some wellknown sources for
+secondary data</a>]
+[<a href="nsshugli.csv">Hugli NSSO data</a>]
 </li>
 
 </ol>
