--- a/sm1/lec6.html
+++ b/sm1/lec6.html
@@ -122,7 +122,7 @@ function myFunction() {
   else
     tphldr.innerHTML = header[index].innerHTML
 }
-</script><script type="text/javascript" src="https://www.isical.ac.in/~arnabc/MathJax/MathJax.js?config=TeX-AMS-MML_HTMLorMML"></script><script type="text/javascript" src="../MathJax/MathJax.js?config=TeX-AMS-MML_HTMLorMML"></script><script src="../tools/htmlwidgets.js"></script>
+</script><script type="text/javascript" src="https://www.isical.ac.in/~arnabc/MathJax/MathJax.js?config=TeX-AMS-MML_HTMLorMML"></script><script type="text/javascript" src="file:///home/asu/na/v/MathJax/MathJax.js?config=TeX-AMS-MML_HTMLorMML"></script><script src="../tools/htmlwidgets.js"></script>
 <link href="../tools/rgl.css" rel="stylesheet"></link>
 <script src="../tools/rglClass.src.js"></script>
 <script src="../tools/CanvasMatrix.src.js"></script>
@@ -192,15 +192,6 @@ outgoing link at random (equal chance to each link), and
 continues indefinitely like that. Keep a track of the proportion
 of times he visits each page. The pages visited most often must
 be the more important ones.
-<font color="red">
-<pre>
-link = matrix(c(2,3,4,2,1,4,5,5,5,5),5,2)
-x = numeric(1000)
-x[1] = sample(5,1)
-for(i in 2:1000) x[i] = link[x[i-1],sample(2,1)]
-barplot(table(x))
-</pre>
-</font>  
 
 
 <h2><a
@@ -275,7 +266,7 @@ coin, thus determining the trait of the offspring.
 All this may sound ridiculous. Indeed, most statistical models do
 sound hopelessly naive. But sometimes they end up explaining the
 reality quite well, better than any other proposed model! Indeed there is
-a famous saying by the statistician David Cox: All statistical
+a famous saying by the statistician George Box: All statistical
 models are wrong, but some are useful! 
 
 
