--- a/sm1/news.html
+++ b/sm1/news.html
@@ -2,6 +2,11 @@
 <body>
 <table border="1">
 
+<tr><td>Sep 04, 2023</td>
+<td>A typo corrected in <a target="naya"
+href="lec6.html">lecure 6</a>. A quote by Box was wrongly
+atrributed to Cox. Thanks to Aryama for pointing it out.</td></tr>
+
 <tr><td>Aug 21, 2023</td>
 <td>R practice problems added.</td></tr>
 
