--- a/sm1/Rhelp.html
+++ b/sm1/Rhelp.html
@@ -291,8 +291,8 @@ another vector, <font size="+1" color="red"><code>y</code></font>:
 <pre>
 myVector = c(3,4,-9, 0, 3 , 7)
 y = numeric(6) # 6 is the length of myVector
-for ( x in myVector) {
-  y[i] = sin(x)
+for (i in 1:6) {
+  y[i] = sin(myVector[i])
 }
 </pre>
 </font>
