--- a/sm1/index.html
+++ b/sm1/index.html
@@ -336,6 +336,24 @@ secondary data</a>]
 [<a href="nsshugli.csv">Hugli NSSO data</a>]
 </li>
 
+
+<li>Sep 04, 2023:
+<ul>
+<li>[<a href="lec7.html">Summary</a>]</li>
+
+<li>Linear algebra
+approach to least squares:
+[<a href="https://youtu.be/C1UnnYzrizo?t=3m36s">Video (3:36 onwards)</a>]</li>
+
+<li>Proof of consistency of the normal equations:
+[<a href="https://youtu.be/HpBL4AkQUcg">Video</a>]</li>
+
+</ul>
+
+</li>
+
+
+
 </ol>
 
 
