--- a/sm1/news.html
+++ b/sm1/news.html
@@ -2,6 +2,10 @@
 <body>
 <table border="1">
 
+<tr><td>Sep 14, 2023</td>
+<td><a target="naya"
+href="projects.html">Projects list</a> uploaded.</td></tr>
+
 <tr><td>Sep 04, 2023</td>
 <td>A typo corrected in <a target="naya"
 href="lec6.html">lecure 6</a>. A quote by Box was wrongly
