--- a/sm1/index.html
+++ b/sm1/index.html
@@ -155,7 +155,9 @@ things (code snippets, data sets etc) here from time to time.
 
 <p></p>
 
-<img src="image/alert.png">Please join Google classroom with <a href="https://classroom.google.com/c/NjE3NzIwOTMyMjA5?cjc=nv4afuy">this joining link</a>
+<img src="image/alert.png">Please see the <a href="projects.html">projects page</a>.
+
+Google classroom <a href="https://classroom.google.com/c/NjE3NzIwOTMyMjA5?cjc=nv4afuy">joining link</a>
 
 <p></p>
 
@@ -351,6 +353,9 @@ approach to least squares:
 </ul>
 
 </li>
+
+
+<li>Sep 14, 2023: Maximum Likelihood Estimation [<a href="lec8.html">Summary</a>]</li>
 
 
 
