--- a/sm1/index.html
+++ b/sm1/index.html
@@ -357,6 +357,12 @@ approach to least squares:
 
 <li>Sep 14, 2023: Maximum Likelihood Estimation [<a href="lec8.html">Summary</a>]</li>
 
+<li>Sep 25, 2023: Videos: 
+[<a href="https://youtu.be/O-Dt_XUc4Jc">outliers</a>]
+[<a href="https://youtu.be/1-KLPM21-68">breakdown point</a>]
+[<a href="https://youtu.be/3gCAblbImk8">multivariate medians</a>]
+
+</li>
 
 
 </ol>
