--- a/sm1/projects.html
+++ b/sm1/projects.html
@@ -166,20 +166,70 @@ it is popularly called. Your task will be to work with still
 photos with a green (or whatever colour you wish) background,
 and to remove it keeping the foreground as intact as
 possible. The photos used MUST be taken by the project group
-(not downloaded). </li>
+(not downloaded). 
+<fieldset>
+<legend><b><i>Students</i></b></legend> Akanksha Das(BS2307)
+                                                            Sohan Karmakar(BS2349)
+                                                             Unnati Mandal(BS2355)
+                                                            Soumya
+                                                            Chanda(BS2350)</fieldset>
+
+
+<fieldset>
+<legend><b><i>Students</i></b></legend>
+Srijeet Bhattacharjee(BS2357),Aishee Bhattacharya(BS2306),Bipayan Banerjee(BS2323),Soham Chatterjee(BS2346) and Rahul Konar(BS2338) </fieldset>
+
+</li>
 
 <li>
 <b>Denoising audio:</b> Record yourself talking in a room
 with mild background noise (<i>e.g.</i>, with an electric fan or noisy
 AC on). Ocassionally pause during talking. Your job is to
 automatically process the recorded to audio to identify these
-pauses, and to make the pauses absolutely silent.</li>
+pauses, and to make the pauses absolutely silent.
+<fieldset>
+<legend><b><i>Students</i></b></legend>
+Pratyush Patra (BS2336),
+Abhirup Mistry (BS2302),
+Nandita Sen (BS2333),
+Soham Dutta (BS2347),
+Rwitobroto Dey (BS2341),
+Aryama Ghosh (BS2316)
+</fieldset>
+
+
+<fieldset>
+<legend><b><i>Students</i></b></legend>
+Adeesh Devasthale (BS2303)
+Aditya Aryan (BS2305)
+Deep Hariya (BS2324)
+Nishant Lamboria (BS2334)
+Sauparna Kar (BS2343)
+Srijan Bhowmic (BS2352)
+</fieldset>
+
+
+<fieldset>
+<legend><b><i>Students</i></b></legend>
+Kirit Maitra (BS2329)
+Mayank Mitra (BS2331)
+Vinayak Tripathi (BS2356)
+Soham Kabir (BS2348)
+Supratim Mondal (BS2354)
+</fieldset>
+
+</li>
 
 <li>
 <b>Classifying iris flowers:</b> Come up with the ``best
 possible'' classifier that will classify the iris flowers using
 Anderson's iris data. Coming up with a reasonable definition of
-``best possible'' is a major part of the challenge.</li>
+``best possible'' is a major part of the challenge.
+<fieldset>
+<legend><b><i>Students</i></b></legend>
+</fieldset>
+
+</li>
 
 <li>
 <b>Missile launch planning:</b> This impressive project is
@@ -188,7 +238,15 @@ band. The launcher consists of a ruler along which the band is
 pulled to some known extent before being released. Your job is
 to collect data and come up with a formula that tells you how
 much to stretch in order to reach a given distance. You must
-also give some error bound.</li>
+also give some error bound.
+<fieldset>
+<legend><b><i>Students</i></b></legend>
+Anjan sadhukhan (BS2310)
+Ayush Baran Sen  (BS2322)
+Rahul Ganguly (BS2337)
+Rupayan Chowdhury (BS2340)</fieldset>
+
+</li>
 
 <li>
 <b>Distance estimation:</b> This one will require an app
@@ -198,26 +256,43 @@ deviation of the values. Hopefully that is the loudness of the
 sound. Now stand at different known distances from a noise source, and
 see the value shown on the app. Your job is to come up with a
 formula to estimate the distance from any given app reading. You
-must provide some suitable error bar.</li>
+must provide some suitable error bar.
+<fieldset>
+<legend><b><i>Students</i></b></legend>
+</fieldset>
+
+</li>
 
 <li>
 <b>Skew angle estimation:</b> Any QR code or bar code reader has to
 do a skew angle estimation, <i>i.e.</i>, estimate the angle at which the object is
 tilted w.r.t. the camera. Take a page of parallel lines, and
 photograph them from  different angles. Try to come up with an
-estimation technique. Check by rotating the image by that angle.</li>
+estimation technique. Check by rotating the image by that angle.
+<fieldset>
+<legend><b><i>Students</i></b></legend>Arikith, Tamim  Abhik </fieldset>
+
+
+
+</li>
 
 <li>
 <b>Develop an online casino:</b> Learn about at least 5
 different gambling schemes used in real casinos, and implement
 them using simulation. There should be an option to compute the
-long term average and standard deviation for each of them.  </li>
+long term average and standard deviation for each of them.  
+</li>
 
 <li>
 <b>Rifle shuffle:</b> Simulate riffle shuffle using the
 model done in class. Then plot the probabilities of various
 events as the number of shuffles increase to see how many
-shuffles are needed to reeach complete mixing.</li>
+shuffles are needed to reeach complete mixing.
+<fieldset>
+<legend><b><i>Students</i></b></legend>
+</fieldset>
+
+</li>
 
 <li>
 <b>Shannon's mind reading game:</b> Claude Shannon, the
@@ -228,7 +303,12 @@ handed back to the magician, who finds the card. The trick is
 that there will be just one singleton rising sequence with a
 ``high probability''. This singleton must be the chosen
 card. Use simulation to find the probability of success of this
-trick.</li>
+trick.
+<fieldset>
+<legend><b><i>Students</i></b></legend>
+</fieldset>
+
+</li>
 
 <li>
 <b>Separating a mixture:</b>
@@ -238,6 +318,24 @@ from $N(\mu_2,\sigma^2_2).$
 The data consist of IID outcomes of this random experiment. Devise some way to estimate 
 $\mu_1,\mu_2,\sigma^2_1$ and $\sigma^2_2$ from the
 data. Implement in R. 
+<fieldset>
+<legend><b><i>Students</i></b></legend>
+</fieldset>
+
+</li>
+
+<li>
+<b>Applying discrete arc sine law for sojourn times on various sports</b>
+
+<fieldset>
+<legend><b><i>Students</i></b></legend>
+Anunoy Chal BS2313
+Aryan Sahu BS2317
+Aryanil Kundu BS2318
+Atmadeep Sengupta BS2320
+Adity Banerjee (BS2304)
+</fieldset>
+
 </li>
 
 </ol>
