--- a/sm1/news.html
+++ b/sm1/news.html
@@ -2,6 +2,10 @@
 <body>
 <table border="1">
 
+<tr><td>Oct 05, 2023</td>
+<td><a target="naya"
+href="projects.html">Projects assignments</a> finalised.</td></tr>
+
 <tr><td>Sep 14, 2023</td>
 <td><a target="naya"
 href="projects.html">Projects list</a> uploaded.</td></tr>
