--- a/sm1/projects.html
+++ b/sm1/projects.html
@@ -149,6 +149,13 @@ library is allowed.
 
 <p></p>
 
+<img src="image/alert.png"><b>The deadline for submission of project is the last
+day before the semestral exam week starts. Submit report (problem
+description, algo, findings etc) and code. Do not include code
+in your report.</b>
+
+<p></p>
+
 <img src="image/alert.png">The projects are often tough, while your expertise in
 statistics is still rudimentary. So do not despair if your
 results are not satisfactory. Your performance will be judged in
@@ -177,7 +184,20 @@ possible. The photos used MUST be taken by the project group
 
 <fieldset>
 <legend><b><i>Students</i></b></legend>
-Srijeet Bhattacharjee(BS2357),Aishee Bhattacharya(BS2306),Bipayan Banerjee(BS2323),Soham Chatterjee(BS2346) and Rahul Konar(BS2338) </fieldset>
+Srijeet Bhattacharjee(BS2357),Aishee Bhattacharya(BS2306),Bipayan
+Banerjee(BS2323),Soham Chatterjee(BS2346) and Rahul
+Konar(BS2338) </fieldset>
+
+
+<fieldset>
+<legend><b><i>Students</i></b></legend> 
+ Aman Singh (BS2308),  
+ Satyaprakash Sahdev Jaiswar (BS2342),
+ Ronak Gupta (BS2339),
+ Saurabh Bhikan Nankar (BS2344), 
+ Subhadip Roy (BS2353),
+ Pallav Sahay (BS2335)
+</fieldset>
 
 </li>
 
@@ -216,6 +236,7 @@ Mayank Mitra (BS2331)
 Vinayak Tripathi (BS2356)
 Soham Kabir (BS2348)
 Supratim Mondal (BS2354)
+Harshit Kalotra (BS2326)
 </fieldset>
 
 </li>
@@ -226,7 +247,8 @@ possible'' classifier that will classify the iris flowers using
 Anderson's iris data. Coming up with a reasonable definition of
 ``best possible'' is a major part of the challenge.
 <fieldset>
-<legend><b><i>Students</i></b></legend>
+<legend><b><i>Student</i></b></legend>
+Krishnam Baregama (BS2330)
 </fieldset>
 
 </li>
@@ -250,7 +272,7 @@ Rupayan Chowdhury (BS2340)</fieldset>
 
 <li>
 <b>Distance estimation:</b> This one will require an app
-that you need to download from. The app records the ambient audio
+that you need to download from <a href="sounddata.apk">here</a>. The app records the ambient audio
 for a fixed period (say 2 secs), and then shows the standard
 deviation of the values. Hopefully that is the loudness of the
 sound. Now stand at different known distances from a noise source, and
@@ -259,6 +281,10 @@ formula to estimate the distance from any given app reading. You
 must provide some suitable error bar.
 <fieldset>
 <legend><b><i>Students</i></b></legend>
+Aishik Bhattacharya (BS2358),
+Arnab Palit (BS2315),
+Inesh Chattopadhyay (BS2328),
+Sourodeep Kanjilal (BS2351)
 </fieldset>
 
 </li>
@@ -306,6 +332,8 @@ card. Use simulation to find the probability of success of this
 trick.
 <fieldset>
 <legend><b><i>Students</i></b></legend>
+Himadri Mandal (BS2327), Ayan Ghosh (BS2321), Drishti Singla (BS2325), Mrittika
+Giri (BS2332), Aman Verma(BS2309), Siddhartha Bhattacharya(BS2345)
 </fieldset>
 
 </li>
@@ -334,7 +362,7 @@ Aryan Sahu BS2317
 Aryanil Kundu BS2318
 Atmadeep Sengupta BS2320
 Adity Banerjee (BS2304)
-</fieldset>
+Ankit Bhar (BS2311)</fieldset>
 
 </li>
 
