--- a/sm1/index.html
+++ b/sm1/index.html
@@ -365,6 +365,18 @@ approach to least squares:
 </li>
 
 
+<li>Oct 05, 2023:
+We have covered the hard part. Now we shall cruise through the
+remainder of the course. I have created a 
+<a href="https://www.youtube.com/playlist?list=PLx--gUxue3Z-BUKXCvZz_EIL0dixAvBHy">Youtube playlist</a>
+containing my lecture videos (the order may differ slightly from the order
+I follow in class). Also we shall now adhere to the textbook by
+Witte and Witte more closely. Read chapter 1 and 2. Skim through
+chapter 8, and sections 9.1 and 9.2. These <i>roughly</i> cover the
+topics taught so far. The rest of the course will primarily deal
+with chapter 3, 4 and 5.
+</li>
+
 </ol>
 
 
