--- a/sm1/news.html
+++ b/sm1/news.html
@@ -3,8 +3,12 @@
 <table border="1">
 
 <tr><td>Oct 05, 2023</td>
-<td><a target="naya"
-href="projects.html">Projects assignments</a> finalised.</td></tr>
+<td><ul><li><a target="naya"
+href="projects.html">Projects assignments</a> finalised.
+<li><a target="naya" href="https://www.youtube.com/playlist?list=PLx--gUxue3Z-BUKXCvZz_EIL0dixAvBHy">Youtube 
+                                playlist</a> on central 
+                                tendency added.</ul>
+</td></tr>
 
 <tr><td>Sep 14, 2023</td>
 <td><a target="naya"
