--- a/sm1/projects.html
+++ b/sm1/projects.html
@@ -225,7 +225,7 @@ Aditya Aryan (BS2305)
 Deep Hariya (BS2324)
 Nishant Lamboria (BS2334)
 Sauparna Kar (BS2343)
-Srijan Bhowmic (BS2352)
+Srijan Bhowmick (BS2352)
 </fieldset>
 
 
