--- a/mult/index.html
+++ b/mult/index.html
@@ -122,7 +122,7 @@ function myFunction() {
   else
     tphldr.innerHTML = header[index].innerHTML
 }
-</script><script type="text/javascript" src="https://www.isical.ac.in/~arnabc/MathJax/MathJax.js?config=TeX-AMS-MML_HTMLorMML"></script><script type="text/javascript" src="../MathJax/MathJax.js?config=TeX-AMS-MML_HTMLorMML"></script><script src="../tools/htmlwidgets.js"></script>
+</script><script type="text/javascript" src="https://www.isical.ac.in/~arnabc/MathJax/MathJax.js?config=TeX-AMS-MML_HTMLorMML"></script><script type="text/javascript" src="file:///home/asu/na/v/MathJax/MathJax.js?config=TeX-AMS-MML_HTMLorMML"></script><script src="../tools/htmlwidgets.js"></script>
 <link href="../tools/rgl.css" rel="stylesheet"></link>
 <script src="../tools/rglClass.src.js"></script>
 <script src="../tools/CanvasMatrix.src.js"></script>
@@ -150,6 +150,15 @@ name="Multivariable Calculus">Multivariable Calculus</a></h1>
 name="ভুল-ত্রুটি">ভুল-ত্রুটি</a></h2>  
 
 <ul>
+
+<li>
+<center>
+<fieldset>
+<legend><b>98  পাতার অংশ৷</b></legend><img width="80%" src="image/p98.png"></fieldset>
+</center>
+এখানে ওই লাল অংশগুলো ভুল করে বাদ দিয়ে ফেলেছিলাম৷
+ভুলটা ধরেছেন অবন্তিকা রায় বর্মণ৷ 
+</li>
 
 <li>
 <center>
