--- a/sm1/news.html
+++ b/sm1/news.html
@@ -2,6 +2,11 @@
 <body>
 <table border="1">
 
+<tr><td>Oct 09, 2023</td>
+<td><ul><li>Android app for <a target="naya"
+href="projects.html">distance estimation project</a> updated.
+<li><a target="naya" href="https://www.youtube.com/playlist?list=PLx--gUxue3Z-BUKXCvZz_EIL0dixAvBHy">Youtube playlist</a> updated with dispersion videos.</ul>
+</td></tr>
 <tr><td>Oct 05, 2023</td>
 <td><ul><li><a target="naya"
 href="projects.html">Projects assignments</a> finalised.
