--- a/sm1/projects.html
+++ b/sm1/projects.html
@@ -272,7 +272,8 @@ Rupayan Chowdhury (BS2340)</fieldset>
 
 <li>
 <b>Distance estimation:</b> This one will require an app
-that you need to download from <a href="sounddata.apk">here</a>. The app records the ambient audio
+that you need to download from <a href="sounddata.apk">here
+(updated for Android 11+)</a>. The app records the ambient audio
 for a fixed period (say 2 secs), and then shows the standard
 deviation of the values. Hopefully that is the loudness of the
 sound. Now stand at different known distances from a noise source, and
