--- a/sm1/index.html
+++ b/sm1/index.html
@@ -377,6 +377,13 @@ topics taught so far. The rest of the course will primarily deal
 with chapter 3, 4 and 5.
 </li>
 
+
+<li>Oct 12, 2023: 
+[<a href="https://youtu.be/TJCcKfrCPMM">Florence
+Nightingale video</a>]
+[<a href="Rfun.html">R functions</a>]
+</li>
+
 </ol>
 
 
