--- a/sm1/index.html
+++ b/sm1/index.html
@@ -384,6 +384,14 @@ Nightingale video</a>]
 [<a href="Rfun.html">R functions</a>]
 </li>
 
+
+<li>Oct 16, 2023: 
+R code for the projection animation used in class:
+[<a href="ui.r">ui.r</a>
+| <a href="server.r">server.r</a>]
+You need to install and shiny package to use these.
+</li>
+
 </ol>
 
 
