--- a/sm1/index.html
+++ b/sm1/index.html
@@ -389,7 +389,7 @@ Nightingale video</a>]
 R code for the projection animation used in class:
 [<a href="ui.r">ui.r</a>
 | <a href="server.r">server.r</a>]
-You need to install and shiny package to use these.
+You need to install and use the shiny package to use these.
 </li>
 
 </ol>
