--- a/sm1/index.html
+++ b/sm1/index.html
@@ -386,10 +386,19 @@ Nightingale video</a>]
 
 
 <li>Oct 16, 2023: 
+<ul>
+
+<li>The concept of dispersion matrix
+[<a href="https://youtu.be/MQcZ-csmA1Y">Video</a>]
+</li>
+<li>
 R code for the projection animation used in class:
 [<a href="ui.r">ui.r</a>
 | <a href="server.r">server.r</a>]
 You need to install and use the shiny package to use these.
+</li>
+</ul>
+
 </li>
 
 </ol>
