--- a/sm1/index.html
+++ b/sm1/index.html
@@ -401,6 +401,24 @@ You need to install and use the shiny package to use these.
 
 </li>
 
+
+<li>Oct 19, 2023: Application of eigenanalysis to statistics:
+<ul>
+
+<li>The first example: 
+[<a href="pca/datacloud.csv">data used</a>]
+[<a href="pca/eigen.r">R code</a>]
+</li>
+
+<li>The second example (face recognition):
+[<a href="https://www.isical.ac.in/~arnabc/talks/facesbwandcol.tar.gz">data used</a>]
+[<a href="pca/eigfaces.r">R code</a>]
+</li>
+
+</ul>
+
+</li>
+
 </ol>
 
 
