--- a/mult/index.html
+++ b/mult/index.html
@@ -180,6 +180,10 @@ name="ভুল-ত্রুটি">ভুল-ত্রুটি</a></h2>
 ভুলটা ধরেছেন জয়দীপ সেন৷
 </li>
 
+<li>সপ্তম অধ্যায়ের Exercise 9-এর দ্বিতীয় অংকটার উত্তর হবে $0.$  আমি ভুল
+ করে $2$  লিখে ফেলেছি৷ ভুলটা ধরেছেন শ্রী সরকার৷ 
+ </li>
+
 </ul>
 
 <p></p>
