--- a/mult/index.html
+++ b/mult/index.html
@@ -184,6 +184,9 @@ name="ভুল-ত্রুটি">ভুল-ত্রুটি</a></h2>
  করে $2$  লিখে ফেলেছি৷ ভুলটা ধরেছেন শ্রী সরকার৷ 
  </li>
 
+<li>326  পাতায় এক জায়গায় লিখে বসে আছি $-\frac 12+2=-\frac 32.$  বলাই বাহুল্য
+ যে, ওটা $\frac 32$  হবে৷ ভুলটা ধরেছেন শ্রী সরকার৷</li>
+
 </ul>
 
 <p></p>
