--- a/sm1/index.html
+++ b/sm1/index.html
@@ -413,6 +413,8 @@ You need to install and use the shiny package to use these.
 <li>The second example (face recognition):
 [<a href="https://www.isical.ac.in/~arnabc/talks/facesbwandcol.tar.gz">data used</a>]
 [<a href="pca/eigfaces.r">R code</a>]
+[<a href="https://www.youtube.com/playlist?list=PLx--gUxue3Z8fvVAMWWltAsHLumwqPThF">Youtube playlist for eigenanalysis in
+statistics (includes face recognition details)</a>]
 </li>
 
 </ul>
