--- a/mult/index.html
+++ b/mult/index.html
@@ -163,12 +163,55 @@ name="ভুল-ত্রুটি">ভুল-ত্রুটি</a></h2>
 <li>
 <center>
 <fieldset>
+<legend><b>152  পাতার অংশ৷</b></legend><img width="80%" src="image/p152a.png"></fieldset>
+</center>
+তৃতীয় অধ্যায়ের এই পাতায় আমি copy-paste  করতে গিয়ে ভুল করে ফেলেছি৷ লাল রং দিয়ে ভুল এবং সংশোধন 
+দুইই দেখালাম৷ ভুলটা ধরেছে অবন্তিকা রায় বর্মণ৷ 
+</li>
+
+<li>
+<center>
+<fieldset>
+<legend><b>152  পাতার আরেক অংশ৷</b></legend><img width="80%" src="image/p152.png"></fieldset>
+</center>
+তৃতীয় অধ্যায়ের সেই একই পাতায় আমি copy-paste  করতে গিয়ে আবার ভুল করে ফেলেছি৷ লাল রং
+ দিয়ে ভুল এবং সংশোধন 
+দুইই দেখালাম৷ এ ভুলটাও ধরেছে অবন্তিকা রায় বর্মণ৷ 
+</li>
+
+<li>
+<center>
+<fieldset>
 <legend><b>268  পাতার অংশ৷</b></legend><img width="80%" src="image/p268.png"></fieldset>
 </center>
 এখানে ওই লাল দিয়ে দেখানো
  integral-টা $1$  থেকে $\infty$  পর্যন্ত হবে৷ ভুলটা পরের পাতাতেও
  গড়িয়েছে৷ ভুলটা ধরেছেন জয়দীপ সেন৷
 </li>
+
+<li>
+<center>
+<fieldset>
+<legend><b>234  পাতার অংশ৷</b></legend><img width="80%" src="image/p234.png"></fieldset>
+</center>
+এটা আসলে 170  নম্বর পাতার Exercise 5-এর উত্তর৷ এখানে ওই লাল $x^2$-টার আগে একটা মাইনাস 
+বসবে৷ 
+ভুলটা ধরেছে অবন্তিকা রায় বর্মণ৷ 
+</li>
+
+<li>
+<center>
+<fieldset>
+<legend><b>270  পাতার অংশ৷</b></legend><img width="80%" src="image/p270.png"></fieldset>
+</center>
+এটা আসলে 241  নম্বর পাতার Exercise 2-এর উত্তর৷ ভুল এবং সংশোধন দুইই লাল
+ দিয়ে দেখিয়েছি৷ 
+ভুলটা ধরেছে অবন্তিকা রায় বর্মণ৷ 
+</li>
+
+<li>পঞ্চম অধ্যায়ে 266  নম্বর পাতার Exercise 21-এর উত্তর হবে
+ (D).  ভুল করে (B)  লিখে ফেলেছি৷
+ভুলটা ধরেছে অবন্তিকা রায় বর্মণ৷ </li>
 
 <li>
 <center>
