--- a/mult/index.html
+++ b/mult/index.html
@@ -202,6 +202,16 @@ name="ভুল-ত্রুটি">ভুল-ত্রুটি</a></h2>
 <li>
 <center>
 <fieldset>
+<legend><b>267  পাতার অংশ৷</b></legend><img width="80%" src="image/p267.png"></fieldset>
+</center>
+এই পরীক্ষার অংকটা ভুল টুকেছিলাম৷ ভুল এবং সংশোধন লাল
+ দিয়ে দেখালাম৷ 
+ভুলটা ধরেছে অবন্তিকা রায় বর্মণ৷ 
+</li>
+
+<li>
+<center>
+<fieldset>
 <legend><b>270  পাতার অংশ৷</b></legend><img width="80%" src="image/p270.png"></fieldset>
 </center>
 এটা আসলে 241  নম্বর পাতার Exercise 2-এর উত্তর৷ ভুল এবং সংশোধন দুইই লাল
