--- a/sm1/index.html
+++ b/sm1/index.html
@@ -421,6 +421,17 @@ statistics (includes face recognition details)</a>]
 
 </li>
 
+
+<li>Oct 30, 2023: Spearman's Rank Correlation</li>
+
+
+<li>Nov 02, 2023: An astrology fallacy regarding pooled correlation</li>
+
+
+<li>Nov 06, 2023: Simpson's paradox. Concept of confounding,
+blocking and randomisation: [<a href="simp.r">R code</a>
+| <a href="simpson.csv">data</a>]</li>
+
 </ol>
 
 
