--- a/sm1/index.html
+++ b/sm1/index.html
@@ -425,7 +425,8 @@ statistics (includes face recognition details)</a>]
 <li>Oct 30, 2023: Spearman's Rank Correlation</li>
 
 
-<li>Nov 02, 2023: An astrology fallacy regarding pooled correlation</li>
+<li>Nov 02, 2023: An astrology fallacy regarding pooled
+correlation [<a href="astro.html">summary</a>]</li>
 
 
 <li>Nov 06, 2023: Simpson's paradox. Concept of confounding,
