--- a/sm1/news.html
+++ b/sm1/news.html
@@ -2,6 +2,10 @@
 <body>
 <table border="1">
 
+<tr><td>Nov 08, 2023</td>
+<td><a target="naya"
+href="astro.html">Astrology fallacy</a> explained.
+</td></tr>
 <tr><td>Oct 16, 2023</td>
 <td><ul><li><a target="naya"
 href="Rfun.html">R functions</a> explained.
