--- a/sm1/index.html
+++ b/sm1/index.html
@@ -433,6 +433,24 @@ correlation [<a href="astro.html">summary</a>]</li>
 blocking and randomisation: [<a href="simp.r">R code</a>
 | <a href="simpson.csv">data</a>]</li>
 
+
+<li>Nov 09, 2023: 
+
+<ul>
+<li>Please skim through Part III (Correlation and
+Regression) from Freedman, Pisani and Purves. It is about 100
+pages, most of which you will find trivially easy. Pay special
+attention to Section 5 of chapter 9 (Association is not
+causation) and Section 4 or chapter 10 (The regression fallacy).
+</li>
+
+<li>Also skim through chapter 1 of the same book to develop
+intuition about controlled experiments.</li>
+
+</ul>
+
+</li>
+
 </ol>
 
 
