--- a/mult/index.html
+++ b/mult/index.html
@@ -154,6 +154,16 @@ name="ভুল-ত্রুটি">ভুল-ত্রুটি</a></h2>
 <li>
 <center>
 <fieldset>
+<legend><b>40  পাতার অংশ৷</b></legend><img width="80%" src="image/p40.png"></fieldset>
+</center>
+এই পাতায় একরাশ ভুল করে ফেলেছি৷ আসলে $0$  আর $1$-এর মধ্যে গুলিয়ে ফেলেছিলাম লেখার সময়ে, ফলে 
+বিভিন্ন অংশের সামঞ্জস্য নষ্ট হয়ে গেছে৷ 
+ভুলটা ধরেছেন প্রতাপ মণ্ডল৷ ৷  
+</li>
+
+<li>
+<center>
+<fieldset>
 <legend><b>98  পাতার অংশ৷</b></legend><img width="80%" src="image/p98.png"></fieldset>
 </center>
 এখানে ওই লাল অংশগুলো ভুল করে বাদ দিয়ে ফেলেছিলাম৷
@@ -166,7 +176,7 @@ name="ভুল-ত্রুটি">ভুল-ত্রুটি</a></h2>
 <legend><b>152  পাতার অংশ৷</b></legend><img width="80%" src="image/p152a.png"></fieldset>
 </center>
 তৃতীয় অধ্যায়ের এই পাতায় আমি copy-paste  করতে গিয়ে ভুল করে ফেলেছি৷ লাল রং দিয়ে ভুল এবং সংশোধন 
-দুইই দেখালাম৷ ভুলটা ধরেছে অবন্তিকা রায় বর্মণ৷ 
+দুইই দেখালাম৷ ভুলটা ধরেছেন অবন্তিকা রায় বর্মণ৷ 
 </li>
 
 <li>
@@ -176,7 +186,7 @@ name="ভুল-ত্রুটি">ভুল-ত্রুটি</a></h2>
 </center>
 তৃতীয় অধ্যায়ের সেই একই পাতায় আমি copy-paste  করতে গিয়ে আবার ভুল করে ফেলেছি৷ লাল রং
  দিয়ে ভুল এবং সংশোধন 
-দুইই দেখালাম৷ এ ভুলটাও ধরেছে অবন্তিকা রায় বর্মণ৷ 
+দুইই দেখালাম৷ এ ভুলটাও ধরেছেন অবন্তিকা রায় বর্মণ৷ 
 </li>
 
 <li>
@@ -196,7 +206,7 @@ name="ভুল-ত্রুটি">ভুল-ত্রুটি</a></h2>
 </center>
 এটা আসলে 170  নম্বর পাতার Exercise 5-এর উত্তর৷ এখানে ওই লাল $x^2$-টার আগে একটা মাইনাস 
 বসবে৷ 
-ভুলটা ধরেছে অবন্তিকা রায় বর্মণ৷ 
+ভুলটা ধরেছেন অবন্তিকা রায় বর্মণ৷ 
 </li>
 
 <li>
@@ -206,7 +216,7 @@ name="ভুল-ত্রুটি">ভুল-ত্রুটি</a></h2>
 </center>
 এই পরীক্ষার অংকটা ভুল টুকেছিলাম৷ ভুল এবং সংশোধন লাল
  দিয়ে দেখালাম৷ 
-ভুলটা ধরেছে অবন্তিকা রায় বর্মণ৷ 
+ভুলটা ধরেছেন অবন্তিকা রায় বর্মণ৷ 
 </li>
 
 <li>
@@ -216,12 +226,12 @@ name="ভুল-ত্রুটি">ভুল-ত্রুটি</a></h2>
 </center>
 এটা আসলে 241  নম্বর পাতার Exercise 2-এর উত্তর৷ ভুল এবং সংশোধন দুইই লাল
  দিয়ে দেখিয়েছি৷ 
-ভুলটা ধরেছে অবন্তিকা রায় বর্মণ৷ 
+ভুলটা ধরেছেন অবন্তিকা রায় বর্মণ৷ 
 </li>
 
 <li>পঞ্চম অধ্যায়ে 266  নম্বর পাতার Exercise 21-এর উত্তর হবে
  (D).  ভুল করে (B)  লিখে ফেলেছি৷
-ভুলটা ধরেছে অবন্তিকা রায় বর্মণ৷ </li>
+ভুলটা ধরেছেন অবন্তিকা রায় বর্মণ৷ </li>
 
 <li>
 <center>
