--- a/sm1/projects.html
+++ b/sm1/projects.html
@@ -149,6 +149,15 @@ library is allowed.
 
 <p></p>
 
+
+<img src="image/alert.png">Each project group should submit a single report in pdf
+along with code etc (separately via email/github link/etc). The
+report must contain exploration of the data. There
+will be a project presentation (about 20min to 30 min per project
+group), where each member has to present a part. No separate viva
+(except questions from the classmates and me during the presentation).  
+<p></p>
+
 <img src="image/alert.png"><b>The deadline for submission of project is the last
 day before the semestral exam week starts. Submit report (problem
 description, algo, findings etc) and code. Do not include code
