--- a/sm2/index.html
+++ b/sm2/index.html
@@ -152,7 +152,7 @@ things (code snippets, data sets etc) here from time to time.
 
 <p></p>
 
-<img src="image/alert.png">Please see the <a href="projects.html">projects page</a>.
+<img src="image/alert.png">
 
 Google classroom <a href="https://classroom.google.com/c/NjUxMjAxMDM3Njk0?cjc=n3nmi54">joining link</a>
 
