--- a/sm2/index.html
+++ b/sm2/index.html
@@ -122,7 +122,7 @@ function myFunction() {
   else
     tphldr.innerHTML = header[index].innerHTML
 }
-</script><script type="text/javascript" src="https://www.isical.ac.in/~arnabc/MathJax/MathJax.js?config=TeX-AMS-MML_HTMLorMML"></script><script type="text/javascript" src="file:///home/asu/na/v/MathJax/MathJax.js?config=TeX-AMS-MML_HTMLorMML"></script><script src="../tools/htmlwidgets.js"></script>
+</script><script type="text/javascript" src="https://arnabc74.github.io/MathJax/MathJax.js?config=TeX-AMS-MML_HTMLorMML"></script><script type="text/javascript" src="file:///home/asu/na/v/MathJax/MathJax.js?config=TeX-AMS-MML_HTMLorMML"></script><script src="../tools/htmlwidgets.js"></script>
 <link href="../tools/rgl.css" rel="stylesheet"></link>
 <script src="../tools/rglClass.src.js"></script>
 <script src="../tools/CanvasMatrix.src.js"></script>
@@ -175,6 +175,13 @@ Google classroom <a href="https://classroom.google.com/c/NjUxMjAxMDM3Njk0?cjc=n3
 <h2><a
 name="Brief lecture notes">Brief lecture notes</a></h2>
 
+<ol type="">
+
+<li>Multivariate statistics</li>
+Here is a Youtube playlist consisting
+of <a href="https://www.youtube.com/playlist?list=PLx--gUxue3Z-UzXZ5d_P9aqcGyBU-7bJ6">20 
+short videos</a>. I 
+</ol>
 
 <h2><a
 name="Reference materials">Reference materials</a></h2>
