--- a/sm2/projects.html
+++ b/sm2/projects.html
@@ -259,79 +259,12 @@ find. This project will explore this.
 </li>
 
 <li>
-<b>Skew angle estimation:</b> Any QR code or bar code reader has to
-do a skew angle estimation, <i>i.e.</i>, estimate the angle at which the object is
-tilted w.r.t. the camera. Take a page of parallel lines, and
-photograph them from  different angles. Try to come up with an
-estimation technique. Check by rotating the image by that angle.
-<fieldset>
-<legend><b><i>Students</i></b></legend>Arikith, Tamim  Abhik </fieldset>
+<b>EM algorithm:</b> 
 
 
-
-</li>
-
-<li>
-<b>Develop an online casino:</b> Learn about at least 5
-different gambling schemes used in real casinos, and implement
-them using simulation. There should be an option to compute the
-long term average and standard deviation for each of them.  
-</li>
-
-<li>
-<b>Rifle shuffle:</b> Simulate riffle shuffle using the
-model done in class. Then plot the probabilities of various
-events as the number of shuffles increase to see how many
-shuffles are needed to reeach complete mixing.
 <fieldset>
 <legend><b><i>Students</i></b></legend>
 </fieldset>
-
-</li>
-
-<li>
-<b>Shannon's mind reading game:</b> Claude Shannon, the
-father of informaton theory, is credited with inventing this
-magic trick. An ordered deck is rifle shuffled thrice. A card is
-picked at random, and inserted back randomly. The deck is then
-handed back to the magician, who finds the card. The trick is
-that there will be just one singleton rising sequence with a
-``high probability''. This singleton must be the chosen
-card. Use simulation to find the probability of success of this
-trick.
-<fieldset>
-<legend><b><i>Students</i></b></legend>
-Himadri Mandal (BS2327), Ayan Ghosh (BS2321), Drishti Singla (BS2325), Mrittika
-Giri (BS2332), Aman Verma(BS2309), Siddhartha Bhattacharya(BS2345)
-</fieldset>
-
-</li>
-
-<li>
-<b>Separating a mixture:</b>
-Consider this random experiment: toss a fair coin, if head, then
-generate from $N(\mu_1,\sigma^2_1)$ else generate
-from $N(\mu_2,\sigma^2_2).$
-The data consist of IID outcomes of this random experiment. Devise some way to estimate 
-$\mu_1,\mu_2,\sigma^2_1$ and $\sigma^2_2$ from the
-data. Implement in R. 
-<fieldset>
-<legend><b><i>Students</i></b></legend>
-</fieldset>
-
-</li>
-
-<li>
-<b>Applying discrete arc sine law for sojourn times on various sports</b>
-
-<fieldset>
-<legend><b><i>Students</i></b></legend>
-Anunoy Chal BS2313
-Aryan Sahu BS2317
-Aryanil Kundu BS2318
-Atmadeep Sengupta BS2320
-Adity Banerjee (BS2304)
-Ankit Bhar (BS2311)</fieldset>
 
 </li>
 
