--- a/sm2/index.html
+++ b/sm2/index.html
@@ -177,10 +177,14 @@ name="Brief lecture notes">Brief lecture notes</a></h2>
 
 <ol type="">
 
-<li>Multivariate statistics</li>
+<li>
+<b>Multivariate statistics:</b>
 Here is a Youtube playlist consisting
 of <a href="https://www.youtube.com/playlist?list=PLx--gUxue3Z-UzXZ5d_P9aqcGyBU-7bJ6">20 
-short videos</a>. I 
+short videos</a>. </li>
+
+<li>Jan 08, 2024: <a href="corr.html">Multiple correlation</a>. </li>
+
 </ol>
 
 <h2><a
