--- a/sm2/corr.html
+++ b/sm2/corr.html
@@ -193,7 +193,7 @@ name="Second formulation">Second formulation</a></h2>
 We
 find $a_0,a_1,...,a_p$ such that 
 $cor(Y,a_0+a_1 X_1+\cdots + a_p X_p)$ is maximised. 
-
+This maximum correlation is the multiple correlation.
 <h2><a
 name="A little simplification">A little simplification</a></h2>
 Since both the formulations work with product-moment correlation,
