--- a/sm2/index.html
+++ b/sm2/index.html
@@ -185,6 +185,8 @@ short videos</a>. </li>
 
 <li>Jan 08, 2024: <a href="corr.html">Multiple correlation</a>. </li>
 
+<li>Jan 12, 2024: <a href="pcorr.html">Partial correlation</a>. </li>
+
 </ol>
 
 <h2><a
