--- a/sm2/index.html
+++ b/sm2/index.html
@@ -187,6 +187,9 @@ short videos</a>. </li>
 
 <li>Jan 12, 2024: <a href="pcorr.html">Partial correlation</a>. </li>
 
+<li>Jan 15, 2024: [ <a href="jan15.r">R session</a>
+| <a href="amazon-books.txt">data</a> ] </li>
+
 </ol>
 
 <h2><a
