--- a/sm2/pcorr.html
+++ b/sm2/pcorr.html
@@ -298,7 +298,7 @@ name="Why does it work?">Why does it work?</a></h3>
 To see why this works, it will help to first centre all the
 variables. Also, partition the data matrix as
 $$
-\left[\begin{array}{ccccccccccc}Y_{n\times p} X_{p\times 1} Z_{p\times 1}
+\left[\begin{array}{ccccccccccc}Y_{n\times p} X_{n\times 1} Z_{n\times 1}
 \end{array}\right].
 $$ 
 Then, thanks to the centring, 
