--- a/sm2/index.html
+++ b/sm2/index.html
@@ -190,6 +190,12 @@ short videos</a>. </li>
 <li>Jan 15, 2024: [ <a href="jan15.r">R session</a>
 | <a href="amazon-books.txt">data</a> ] </li>
 
+<li>
+<img src="image/alert.png">Assignment 1 sent to Google classroom. Here is
+the <a href="amazon-books.txt">dataset</a>. Last date for
+submission is Jan 28, 2024. Not joining Google classroom in time
+will not be considered as an excuse!</li>
+
 </ol>
 
 <h2><a
