--- a/sm2/index.html
+++ b/sm2/index.html
@@ -196,6 +196,11 @@ the <a href="amazon-books.txt">dataset</a>. Last date for
 submission is Jan 28, 2024. Not joining Google classroom in time
 will not be considered as an excuse!</li>
 
+<li>Jan 19, 2024: We have started following the Ramachandran and
+Tsokos book starting with chapter 4. The book uses moment
+generating functions (MGF) somewhat wrongly. We shall replace
+those parts with the <a href="cf.html">characteristic functions</a>.</li>
+
 </ol>
 
 <h2><a
