--- a/sm2/index.html
+++ b/sm2/index.html
@@ -201,6 +201,9 @@ Tsokos book starting with chapter 4. The book uses moment
 generating functions (MGF) somewhat wrongly. We shall replace
 those parts with the <a href="cf.html">characteristic functions</a>.</li>
 
+<li>Jan 22, 2024: Banach-Tarski Paradox [<a href="madhavabtshow.pdf">slides</a>]
+</li>
+
 </ol>
 
 <h2><a
