--- a/sm2/index.html
+++ b/sm2/index.html
@@ -204,6 +204,10 @@ those parts with the <a href="cf.html">characteristic functions</a>.</li>
 <li>Jan 22, 2024: Banach-Tarski Paradox [<a href="madhavabtshow.pdf">slides</a>]
 </li>
 
+<li>Jan 29, 2024: Multivariate Gaussian distribution
+and $\chi^2$ distribution [<a href="gausamdist.html">summary</a>]
+</li>
+
 </ol>
 
 <h2><a
