--- a/sm2/index.html
+++ b/sm2/index.html
@@ -208,6 +208,10 @@ those parts with the <a href="cf.html">characteristic functions</a>.</li>
 and $\chi^2$ distribution [<a href="gausamdist.html">summary</a>]
 </li>
 
+<li>Feb 02, 2024: Visualising bivariate Gaussian 
+and $\chi^2$ distributions [<a href="hist.r">R code</a>]
+</li>
+
 </ol>
 
 <h2><a
