--- a/sm2/index.html
+++ b/sm2/index.html
@@ -212,6 +212,10 @@ and $\chi^2$ distribution [<a href="gausamdist.html">summary</a>]
 and $\chi^2$ distributions [<a href="hist.r">R code</a>]
 </li>
 
+<li>Feb 05, 2024: Quality control simulation [<a href="qc.r">R code</a>]
+</li>
+
+
 </ol>
 
 <h2><a
