--- a/sm2/index.html
+++ b/sm2/index.html
@@ -215,6 +215,9 @@ and $\chi^2$ distributions [<a href="hist.r">R code</a>]
 <li>Feb 05, 2024: Application of sampling distribution in quality control [<a href="sampappl.html">summary</a>|<a href="qc.r">R code</a>]
 </li>
 
+<li>
+<img src="image/alert.png">Assignment 2 is <a href="hw2/pic.html">here</a>. 
+Upload solutions to Google classroom.</li>
 
 </ol>
 
