--- a/sm2/news.html
+++ b/sm2/news.html
@@ -2,12 +2,15 @@
 <body>
 <table border="1">
 
-<tr><td>Jan 18, 2024</td>
+<tr><td>Feb 10, 2024</td>
+<td>Assignment 2 posted in Google classroom.
+</td></tr><tr><td>Jan 18, 2024</td>
 <td>Assignment 1 posted in Google classroom.
 </td></tr>
 <tr><td>Jan 08, 2024</td>
 <td>Classes start.
 </td></tr>
+
 
 </table>
 </body>
