--- a/sm2/index.html
+++ b/sm2/index.html
@@ -219,6 +219,12 @@ and $\chi^2$ distributions [<a href="hist.r">R code</a>]
 <img src="image/alert.png">Assignment 2 is <a href="hw2/pic.html">here</a>. 
 Upload solutions to Google classroom.</li>
 
+<li>Feb 16, 2024: $\chi^2$-tests (Section 7.6 of our
+textbook)</li>
+
+<li>Feb 19, 2024: <a href="chilab.r">R code</a>
+</li>
+
 </ol>
 
 <h2><a
