--- a/sm2/index.html
+++ b/sm2/index.html
@@ -158,6 +158,13 @@ Google classroom <a href="https://classroom.google.com/c/NjUxMjAxMDM3Njk0?cjc=n3
 
 <p></p>
 
+<p></p>
+
+<img src="image/alert.png">
+
+Projects ar posted at <a href="projects.html">this link</a>.
+<p></p>
+
 <table align="right" width="50%">
 <tr>
 <td><b>Notice board</b></td>
