--- a/sm2/projects.html
+++ b/sm2/projects.html
@@ -216,7 +216,14 @@ inconclusive. Fixed sample size proecedures resolves such cases
 in favour of $H_0.$ We want to come up with a test procedure
 that will ask for more data in such cases. The desired test
 procedure should split the sample space into three parts: accept,
-reject and continue. Suggest (and implement) how it may be done satisfactorily.
+reject and continue.
+This project will explore a simple toy version of this: there are
+20 closed boxes, exactly 5 of which contain a Rs 5 coin. You have
+to pay Re 1 to open a box. If the opened box contains a coin, it
+is yours. What is the best strategy to maximise expected gain. No
+closed form solution may exist. Coming up with a computer program
+(along with a mathematical proof of its optimality) is all that I
+expect. 
 <fieldset>
 <legend><b><i>Student</i></b></legend>
 
@@ -248,8 +255,11 @@ find. This project will explore this.
 </li>
 
 <li>
-<b>Computing multivariate medians:</b>
-
+<b>Computing multivariate medians:</b> We have discussed
+different types of multivariate medians in class. Some of them
+are rather tricky to compute. Write programs to compute them
+in $k$-dim. If general $k$ is difficult, you may just
+focus on $k=3.$
 <fieldset>
 <legend><b><i>Students</i></b></legend>
 
@@ -260,7 +270,35 @@ find. This project will explore this.
 
 <li>
 <b>EM algorithm:</b> 
+Read about the basics of the Expectation-Maximisation algorithm
+to compute MLE. Implement it for some real life
+problem. Different student groups must take different application areas.
+<fieldset>
+<legend><b><i>Students</i></b></legend>
+</fieldset>
 
+</li>
+
+<li>
+<b>Information theory:</b> 
+Morse code sends English characters using dots and dashes. The
+letter E is represented by a single dot. This is reasonable
+because E happens to the most frequently occuring letter in
+normal usage. So assigning the shortest code to it makes sense
+from the viewpoint of length optimisation. "More frequent inputs
+should be mapped to shorter outputs" is an intuitive idea that
+has been rigoorised in Huffman encoding. This first part of the project is to learn
+about this Huffman coding and its optimality (along with the
+important concept of entropy).  Huffman coding is optimal when
+the input probability distribution is known. If it is not known,
+then Huffman encoding may perform badly. So the natural question
+is whether one can come up with an encodig scheme that guarantees
+a minimum performance against all input probability
+distributions. 
+
+<p></p>
+This is not an easy project. You will need to consult chapter 12
+of the book Elements of Information Theory by Thomas and Cover. 
 
 <fieldset>
 <legend><b><i>Students</i></b></legend>
