--- a/sm2/index.html
+++ b/sm2/index.html
@@ -162,7 +162,7 @@ Google classroom <a href="https://classroom.google.com/c/NjUxMjAxMDM3Njk0?cjc=n3
 
 <img src="image/alert.png">
 
-Projects ar posted at <a href="projects.html">this link</a>.
+Projects are posted at <a href="projects.html">this link</a>.
 <p></p>
 
 <table align="right" width="50%">
