--- a/sm2/index.html
+++ b/sm2/index.html
@@ -232,6 +232,17 @@ textbook)</li>
 <li>Feb 19, 2024: <a href="chilab.r">R code</a>
 </li>
 
+
+<li>Mar 11,
+2024: Basic idea behind test of
+hypotheses: [<a href="https://www.youtube.com/watch?v=yayYsofoaGQ">video 1</a>
+| <a href="https://youtu.be/oYZlMJK-vYI?si=Ql5PQq-3-ytk1En7">video
+2</a> | <a href="testhyp.html">summary</a>]
+</li>
+
+<li>Mar 15, 2024: Point estimation. Follow chapter 5 of the
+Ramachandran and Tsokos book.</li>
+
 </ol>
 
 <h2><a
